welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:65: error: Unmatched closing brace '}' ignored here
}
^